Add demo images to likestore console

--- a/work/projects/likestore-console.html
+++ b/work/projects/likestore-console.html
@@ -47,22 +47,35 @@
 					</picture>
 				</figure>
 			</section>
-			<section class="section-demo animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
-				<figure class="border-radius">
+			<section class="section-demo">
+				<figure class="border-radius animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
 					<picture>
 						<source media="(max-width: 600px)" srcset="/images/likestore/likestore024-small.jpg" alt="">
 						<source media="(min-width: 601px)" srcset="/images/likestore/likestore024.jpg" alt="">
 						<img src="/images/likestore/likestore024.jpg" alt="">
 					</picture>
 				</figure>
-				<figure class="border-radius">
+				<figure class="border-radius animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
 					<picture>
 						<source media="(max-width: 600px)" srcset="/images/likestore/likestore025-small.jpg" alt="">
 						<source media="(min-width: 601px)" srcset="/images/likestore/likestore025.jpg" alt="">
 						<img src="/images/likestore/likestore025.jpg" alt="">
 					</picture>
 				</figure>
-				
+				<figure class="border-radius animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/likestore/likestore026-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/likestore/likestore026.jpg" alt="">
+						<img src="/images/likestore/likestore026.jpg" alt="">
+					</picture>
+				</figure>
+				<figure class="border-radius animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/likestore/likestore027-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/likestore/likestore027.jpg" alt="">
+						<img src="/images/likestore/likestore027.jpg" alt="">
+					</picture>
+				</figure>
 			</section>
 		</div>
 	</div>
