--- a/work/projects/likestore-identify.html
+++ b/work/projects/likestore-identify.html
@@ -31,12 +31,28 @@
 		</section>
 		<div class="contentWrap">
 			<section class="navigation"></section>
-			<section class="section-desc copyright">
+			<section class="section-desc">
 				<figure class="animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s">
 					<picture>
 						<source media="(max-width: 600px)" srcset="/images/likestore/likestore032-small.jpg" alt="">
 						<source media="(min-width: 601px)" srcset="/images/likestore/likestore032.jpg" alt="">
 						<img src="/images/likestore/likestore032.jpg" alt="">
+					</picture>
+				</figure>
+				<figure class="animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".4s">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/likestore/likestore033-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/likestore/likestore033.jpg" alt="">
+						<img src="/images/likestore/likestore033.jpg" alt="">
+					</picture>
+				</figure>
+			</section>
+			<section class="section-desc copyright">
+				<figure class="animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/likestore/likestore036-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/likestore/likestore036.jpg" alt="">
+						<img src="/images/likestore/likestore036.jpg" alt="">
 					</picture>
 					<figcaption>
 						<a class="f-13" href="https://www.avenuespace.com/portfolio-item/likestore-%E9%9B%BB%E5%95%86%E5%B9%B3%E5%8F%B0%E4%B8%8A%E7%B7%9A%E8%A8%98%E8%80%85%E6%9C%83/" target="_blank">photo by GO92</a>
@@ -44,9 +60,9 @@
 				</figure>
 				<figure class="animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".4s">
 					<picture>
-						<source media="(max-width: 600px)" srcset="/images/likestore/likestore033-small.jpg" alt="">
-						<source media="(min-width: 601px)" srcset="/images/likestore/likestore033.jpg" alt="">
-						<img src="/images/likestore/likestore033.jpg" alt="">
+						<source media="(max-width: 600px)" srcset="/images/likestore/likestore037-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/likestore/likestore037.jpg" alt="">
+						<img src="/images/likestore/likestore037.jpg" alt="">
 					</picture>
 				</figure>
 			</section>
