Add design guideline to crm page

--- a/work/projects/crm.html
+++ b/work/projects/crm.html
@@ -74,6 +74,13 @@
 						<source media="(min-width: 601px)" srcset="/images/crm/crm016.jpg" alt="">
 						<img src="/images/crm/crm016.jpg" alt="">
 					</picture>
+				</figure>	
+				<figure class="border-radius">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/crm/crm017-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/crm/crm017.jpg" alt="">
+						<img src="/images/crm/crm017.jpg" alt="">
+					</picture>
 				</figure>				
 			</section>
 		</div>
