Update crm image and wording

--- a/work/projects/crm.html
+++ b/work/projects/crm.html
@@ -23,7 +23,7 @@
 						</h3>
 					</div>
 					<p class="f-18">
-						The CRM template is flexible, includes eDM, SMS, App push.
+						Customer Relationship Management (CRM) is a B2C marketing tool, the CRM template is flexible, includes eDM, SMS, App push.
 					</p>
 				</figcaption>
 				<img class="animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".4s" src="/images/crm/crm011.jpg" alt="">
@@ -36,9 +36,9 @@
 					<div class="dummy"></div>
 					<div class="block">
 						<picture>
-							<source media="(max-width: 600px)" srcset="/images/crm-small.jpg" alt="">
-							<source media="(min-width: 601px)" srcset="/images/crm.jpg" alt="">
-							<img src="/images/crm.jpg" alt="">
+							<source media="(max-width: 600px)" srcset="/images/crm/crm012-small.jpg" alt="">
+							<source media="(min-width: 601px)" srcset="/images/crm/crm012.jpg" alt="">
+							<img src="/images/crm/crm012.jpg" alt="">
 						</picture>
 					</div>
 				</figure>
