Add image to crm flow

--- a/work/projects/crm.html
+++ b/work/projects/crm.html
@@ -53,6 +53,15 @@
 					</div>
 				</figure>
 			</section>
+			<section class="section-desc flow-demo">
+				<figure class="animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/crm/crm-flow-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/crm/crm-flow.jpg" alt="">
+						<img src="/images/crm/crm-flow.jpg" alt="">
+					</picture>
+				</figure>
+			</section>
 			<section class="section-demo animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
 				<figure class="border-radius">
 					<picture>
