--- a/work/books/book-taitung.html
+++ b/work/books/book-taitung.html
@@ -23,10 +23,11 @@
 							<span class="f-18">Design cover, inside page, layout</span>
 						</h3>
 					</div>
-					<p class="f-16">
-						<p>Publisher: La Vie</p>
-						<p>Date of publication: 2014 Apr</p>
-					</p>
+					<div class="f-15 dev-team">
+						<p>Publisher - La Vie</p>
+						<p>Date of publication - 2014 Apr</p>
+						<p>Book Design - Jessica Wu</p>
+					</div>
 				</figcaption>
 			</figure>
 		</section>
