--- a/work/books/book-tea.html
+++ b/work/books/book-tea.html
@@ -23,10 +23,12 @@
 							<span class="f-18">Design inside page, layout</span>
 						</h3>
 					</div>
-					<p class="f-16">
-						<p>Publisher: La Vie</p>
-						<p>Date of publication: 2014 Jun</p>
-					</p>
+					<div class="f-15 dev-team">
+						<p>Publisher - La Vie</p>
+						<p>Date of publication - 2014 Jun</p>
+						<p>Book Design - Jessica Wu, Amber Lee</p>
+						<p>Cover Design - Amber Lee</p>
+					</div>
 				</figcaption>
 			</figure>
 		</section>
