--- a/work/projects/crm.html
+++ b/work/projects/crm.html
@@ -25,6 +25,10 @@
 					<p class="f-18">
 						Customer Relationship Management (CRM) is a B2C marketing tool, the CRM template is flexible, includes eDM, SMS, App push.
 					</p>
+					<div class="f-15 dev-team">
+						<p>Web Design - Jessica Wu</p>
+						<p>Website Dev - Kendra Tang, Leila Kao, Terry Yu</p>
+					</div>
 				</figcaption>
 				<img class="animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".4s" src="/images/crm/crm011.jpg" alt="">
 			</figure>
