--- a/work/projects/funoo-console.html
+++ b/work/projects/funoo-console.html
@@ -25,6 +25,10 @@
 					<p class="f-18">
 						FunOO is a e-commerce platform, that empowered anyone to create their own online store with no coding skills needed.
 					</p>
+					<div class="f-15 dev-team">
+						<p>Web Design - Jessica Wu</p>
+						<p>Website Dev - Terry Yu, Diane Chou, Ji Wan Tseng</p>
+					</div>
 				</figcaption>
 				<img class="animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".4s" src="/images/funoo/funoo021.jpg" alt="">
 			</figure>
