Add flow image to likestore console

--- a/work/projects/likestore-console.html
+++ b/work/projects/likestore-console.html
@@ -51,6 +51,15 @@
 					</picture>
 				</figure>
 			</section>
+			<section class="section-desc flow-demo">
+				<figure class="animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/likestore/likestore-flow-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/likestore/likestore-flow.jpg" alt="">
+						<img src="/images/likestore/likestore-flow.jpg" alt="">
+					</picture>
+				</figure>
+			</section>
 			<section class="section-demo">
 				<figure class="border-radius animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
 					<picture>
