Add design guideline to crm

--- a/work/projects/crm.html
+++ b/work/projects/crm.html
@@ -87,12 +87,27 @@
 						<source media="(min-width: 601px)" srcset="/images/crm/crm016.jpg" alt="">
 						<img src="/images/crm/crm016.jpg" alt="">
 					</picture>
-				</figure>	
-				<figure class="border-radius">
+				</figure>
+				<h3 class="f-25">DESIGN GUIDELINE</h3>	
+				<figure>
 					<picture>
-						<source media="(max-width: 600px)" srcset="/images/crm/crm017-small.jpg" alt="">
-						<source media="(min-width: 601px)" srcset="/images/crm/crm017.jpg" alt="">
-						<img src="/images/crm/crm017.jpg" alt="">
+						<source media="(max-width: 600px)" srcset="/images/crm/crm018-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/crm/crm018.jpg" alt="">
+						<img src="/images/crm/crm018.jpg" alt="">
+					</picture>
+				</figure>	
+				<figure>
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/crm/crm019-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/crm/crm019.jpg" alt="">
+						<img src="/images/crm/crm019.jpg" alt="">
+					</picture>
+				</figure>
+				<figure>
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/crm/crm020-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/crm/crm020.jpg" alt="">
+						<img src="/images/crm/crm020.jpg" alt="">
 					</picture>
 				</figure>				
 			</section>
