Add style tile to likestore web

--- a/work/projects/likestore-web.html
+++ b/work/projects/likestore-web.html
@@ -48,6 +48,30 @@
 					</picture>
 				</figure>
 			</section>
+			<h3 class="f-30 txt-center pt-2">Website Style Tiles</h3>
+			<section class="section-desc flow-demo small">
+				<figure class="animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/likestore/likestore-style-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/likestore/likestore-style.jpg" alt="">
+						<img src="/images/likestore/likestore-style.jpg" alt="">
+					</picture>
+				</figure>
+				<figure class="animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/likestore/likestore-style2-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/likestore/likestore-style2.jpg" alt="">
+						<img src="/images/likestore/likestore-style2.jpg" alt="">
+					</picture>
+				</figure>
+				<figure class="animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/likestore/likestore-style3-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/likestore/likestore-style3.jpg" alt="">
+						<img src="/images/likestore/likestore-style3.jpg" alt="">
+					</picture>
+				</figure>
+			</section>
 			<section class="section-demo animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
 				<figure class="border-radius">
 					<picture>
