Add images to likestore website

--- a/work/projects/likestore-web.html
+++ b/work/projects/likestore-web.html
@@ -16,7 +16,7 @@
 			<figure>
 				<figcaption class="title animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s">
 					<h1 class="f-40">
-						likestore homepage
+						likestore website
 					</h1>
 					<div class="info">
 						<h3 class="f-25">
@@ -48,7 +48,7 @@
 					</picture>
 				</figure>
 			</section>
-			<h3 class="f-30 txt-center pt-2">Website Style Tiles</h3>
+			<h3 class="f-30 txt-center pt-2 animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">Website Style Tiles</h3>
 			<section class="section-desc flow-demo small">
 				<figure class="animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
 					<picture>
@@ -72,15 +72,29 @@
 					</picture>
 				</figure>
 			</section>
-			<section class="section-demo animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
-				<figure class="border-radius">
+			<section class="section-demo">
+				<figure class="border-radius animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
 					<picture>
 						<source media="(max-width: 600px)" srcset="/images/likestore/likestore014-small.jpg">
 						<source media="(min-width: 601px)" srcset="/images/likestore/likestore014.jpg">
 						<img src="/images/likestore/likestore014.jpg" alt="">
 					</picture>
 				</figure>
-				<figure class="bg-transparent">
+				<figure class="border-radius animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/likestore/likestore038-small.jpg">
+						<source media="(min-width: 601px)" srcset="/images/likestore/likestore038.jpg">
+						<img src="/images/likestore/likestore038.jpg" alt="">
+					</picture>
+				</figure>
+				<figure class="border-radius animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/likestore/likestore039-small.jpg">
+						<source media="(min-width: 601px)" srcset="/images/likestore/likestore039.jpg">
+						<img src="/images/likestore/likestore039.jpg" alt="">
+					</picture>
+				</figure>
+				<figure class="bg-transparent animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
 					<picture>
 						<source media="(max-width: 600px)" srcset="/images/likestore/likestore015-small.png">
 						<source media="(min-width: 601px)" srcset="/images/likestore/likestore015.png">
