Add web builder image to likestore console

--- a/work/projects/likestore-console.html
+++ b/work/projects/likestore-console.html
@@ -27,6 +27,7 @@
 					</p>
 					<div class="f-15 dev-team">
 						<p>Web Design - Jessica Wu</p>
+						<p>Web Builder Design - Bruce Lan</p>
 						<p>Website Dev - Ji Wan Tseng, Terry Yu</p>
 					</div>
 				</figcaption>
@@ -77,16 +78,23 @@
 				</figure>
 				<figure class="border-radius animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
 					<picture>
-						<source media="(max-width: 600px)" srcset="/images/likestore/likestore026-small.jpg" alt="">
-						<source media="(min-width: 601px)" srcset="/images/likestore/likestore026.jpg" alt="">
-						<img src="/images/likestore/likestore026.jpg" alt="">
-					</picture>
-				</figure>
-				<figure class="border-radius animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
-					<picture>
 						<source media="(max-width: 600px)" srcset="/images/likestore/likestore027-small.jpg" alt="">
 						<source media="(min-width: 601px)" srcset="/images/likestore/likestore027.jpg" alt="">
 						<img src="/images/likestore/likestore027.jpg" alt="">
+					</picture>
+				</figure>
+				<figure class="bg-transparent animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/likestore/likestore-webbuilder-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/likestore/likestore-webbuilder.jpg" alt="">
+						<img src="/images/likestore/likestore-webbuilder.jpg" alt="">
+					</picture>
+				</figure>
+				<figure class="bg-transparent animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/likestore/likestore-webbuilder02-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/likestore/likestore-webbuilder02.jpg" alt="">
+						<img src="/images/likestore/likestore-webbuilder02.jpg" alt="">
 					</picture>
 				</figure>
 			</section>
