Add template images to crm

--- a/work/projects/crm.html
+++ b/work/projects/crm.html
@@ -66,44 +66,58 @@
 					</picture>
 				</figure>
 			</section>
-			<section class="section-demo animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
-				<figure class="border-radius">
+			<section class="section-demo">
+				<figure class="border-radius animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
 					<picture>
 						<source media="(max-width: 600px)" srcset="/images/crm/crm014-small.jpg" alt="">
 						<source media="(min-width: 601px)" srcset="/images/crm/crm014.jpg" alt="">
 						<img src="/images/crm/crm014.jpg" alt="">
 					</picture>
 				</figure>
-				<figure class="border-radius">
+				<figure class="border-radius animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
 					<picture>
 						<source media="(max-width: 600px)" srcset="/images/crm/crm015-small.jpg" alt="">
 						<source media="(min-width: 601px)" srcset="/images/crm/crm015.jpg" alt="">
 						<img src="/images/crm/crm015.jpg" alt="">
 					</picture>
 				</figure>
-				<figure class="border-radius">
+				<figure class="border-radius animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
 					<picture>
 						<source media="(max-width: 600px)" srcset="/images/crm/crm016-small.jpg" alt="">
 						<source media="(min-width: 601px)" srcset="/images/crm/crm016.jpg" alt="">
 						<img src="/images/crm/crm016.jpg" alt="">
 					</picture>
 				</figure>
-				<h3 class="f-25">DESIGN GUIDELINE</h3>	
-				<figure>
+				<figure class="border-radius animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/crm/crm021-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/crm/crm021.jpg" alt="">
+						<img src="/images/crm/crm021.jpg" alt="">
+					</picture>
+				</figure>
+				<figure class="border-radius animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/crm/crm022-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/crm/crm022.jpg" alt="">
+						<img src="/images/crm/crm022.jpg" alt="">
+					</picture>
+				</figure>
+				<h3 class="f-25 animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">DESIGN GUIDELINE</h3>	
+				<figure class="animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
 					<picture>
 						<source media="(max-width: 600px)" srcset="/images/crm/crm018-small.jpg" alt="">
 						<source media="(min-width: 601px)" srcset="/images/crm/crm018.jpg" alt="">
 						<img src="/images/crm/crm018.jpg" alt="">
 					</picture>
 				</figure>	
-				<figure>
+				<figure class="animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
 					<picture>
 						<source media="(max-width: 600px)" srcset="/images/crm/crm019-small.jpg" alt="">
 						<source media="(min-width: 601px)" srcset="/images/crm/crm019.jpg" alt="">
 						<img src="/images/crm/crm019.jpg" alt="">
 					</picture>
 				</figure>
-				<figure>
+				<figure class="animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
 					<picture>
 						<source media="(max-width: 600px)" srcset="/images/crm/crm020-small.jpg" alt="">
 						<source media="(min-width: 601px)" srcset="/images/crm/crm020.jpg" alt="">
