Fix typo `identify`

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 					<a href="/work/projects/likestore-identify.html">
 						<div class="imgMask">
 							<div class="txtBox">
-								<p class="f-25 title">likestore identify</p>
+								<p class="f-25 title">likestore identity</p>
 								<p class="f-16">Visual / Graphic</p>
 							</div>
 						</div>
@@ -263,7 +263,7 @@
 					<a href="/work/projects/funoo-identify.html">
 						<div class="imgMask">
 							<div class="txtBox">
-								<p class="f-25 title">funoo identify</p>
+								<p class="f-25 title">funoo identity</p>
 								<p class="f-16">Visual / Graphic</p>
 							</div>
 						</div>
