--- a/work/projects/likestore-identify.html
+++ b/work/projects/likestore-identify.html
@@ -15,7 +15,7 @@
 			<figure>
 				<figcaption class="title animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s">
 					<h1 class="f-40">
-						likestore identify
+						likestore identity
 					</h1>
 					<div class="info">
 						<h3 class="f-25">
