Add eng version images to funoo

--- a/work/projects/funoo-console.html
+++ b/work/projects/funoo-console.html
@@ -51,22 +51,43 @@
 					</picture>
 				</figure>
 			</section>
-			<section class="section-demo animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
-				<figure class="border-radius">
+			<section class="section-demo">
+				<figure class="border-radius animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
 					<picture>
 						<source media="(max-width: 600px)" srcset="/images/funoo/funoo024-small.jpg" alt="">
 						<source media="(min-width: 601px)" srcset="/images/funoo/funoo024.jpg" alt="">
 						<img src="/images/funoo/funoo024.jpg" alt="">
 					</picture>
 				</figure>
-				<figure class="border-radius">
+				<figure class="border-radius animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
 					<picture>
 						<source media="(max-width: 600px)" srcset="/images/funoo/funoo025-small.jpg" alt="">
 						<source media="(min-width: 601px)" srcset="/images/funoo/funoo025.jpg" alt="">
 						<img src="/images/funoo/funoo025.jpg" alt="">
 					</picture>
 				</figure>
-				
+				<h3 class="f-25 pt-2 animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">ENGLISH VERSION</h3>
+				<figure class="bg-transparent animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/funoo/funoo026-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/funoo/funoo026.jpg" alt="">
+						<img src="/images/funoo/funoo026.jpg" alt="">
+					</picture>
+				</figure>
+				<figure class="bg-transparent animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/funoo/funoo027-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/funoo/funoo027.jpg" alt="">
+						<img src="/images/funoo/funoo027.jpg" alt="">
+					</picture>
+				</figure>
+				<figure class="bg-transparent animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/funoo/funoo028-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/funoo/funoo028.jpg" alt="">
+						<img src="/images/funoo/funoo028.jpg" alt="">
+					</picture>
+				</figure>
 			</section>
 		</div>
 	</div>
