--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
 						<p class="f-15 label">Skills</p>
 						<div class="list f-16">
 							<ul>
+								<li>Figma</li>
 								<li>Sketch</li>
 								<li>Zeplin</li>
 								<li>Photoshop</li>
 								<li>Illustrator</li>
 								<li>Indesign</li>
-								<li>RWD</li>
-								<li>HTML</li>
+								<li>HTML, RWD</li>
 								<li>CSS, Sass</li>
 								<li>Bootstarp</li>
 								<li>Vuetify</li>
@@ -82,6 +82,21 @@
 							</ul>
 						</div>
 						<p class="f-15 label">Work Experiences</p>
+						<div class="career">
+							<div class="period">
+								<div>
+									<p class="f-20 company">Ignatius</p>
+									<p class="f-14">Nov 2020 - Jul 2021</p>
+								</div>
+								<p class="location">Taipei City</p>
+							</div>
+							<div class="description">
+								<p class="f-16 jobTitle"><b>UI / UX Designer</b></p>
+								<p class="f-15">
+									OPHI is an ERP system for dental clinic. <br>I am in charge of UI UX design, focus on enhance user experence from user flow and maintain responsive design. 
+								</p>
+							</div>
+						</div>
 						<div class="career">
 							<div class="period">
 								<div>
@@ -174,7 +189,32 @@
 		</section>
 		<section class="projects section bg-gray sectionBorder" id="projects">
 			<h2 class="f-44 animated wow fadeInDown" data-wow-duration="1.0s" data-wow-delay=".4s">projects</h2>
-			<div class="likestore">
+			<div class="ophi">
+				<div class="info animated wow fadeInDown" data-wow-duration="1.0s" data-wow-delay=".4s">
+					<h3 class="f-25">
+						OPHI／
+						<span class="f-16">UI, UX, Front-end code, RWD</span>
+					</h3>
+				</div>
+				<div class="imgGroup">
+					<div class="imgBox animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".6s" id="btnLikeweb">
+						<picture>
+							<source media="(max-width: 600px)" srcset="/images/ophi-small.jpg">
+							<source media="(min-width: 601px)" srcset="/images/ophi.jpg">
+							<img src="images/ophi.jpg">
+						</picture>
+						<a href="/work/projects/ophi.html">
+							<div class="imgMask">
+								<div class="txtBox">
+									<p class="f-25 title">OPHI ERP</p>
+									<p class="f-16">UI / UX / Front-end code / RWD</p>
+								</div>
+							</div>
+						</a>
+					</div>
+				</div>	
+			</div>
+			<div class="likestore mt-3">
 				<div class="info animated wow fadeInDown" data-wow-duration="1.0s" data-wow-delay=".4s">
 					<h3 class="f-25">
 						likestore／
@@ -203,7 +243,6 @@
 								</div>
 							</div>
 						</a>
-
 					</div>
 					<div class="imgBox animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".6s">
 						<img src="/images/likestore03.jpg">
