--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 					</div>
 				</div>	
 			</div>
-			<div class="likestore mt-3">
+			<div class="likestore pt-3">
 				<div class="info animated wow fadeInDown" data-wow-duration="1.0s" data-wow-delay=".4s">
 					<h3 class="f-25">
 						likestore／
