--- a/work/projects/likestore-web.html
+++ b/work/projects/likestore-web.html
@@ -105,7 +105,7 @@
 		</section>
 	</div>
 	<div class="buttons">
-		<button class="btn btn-outline f-15" onclick="location.href='funoo-identify.html'">
+		<button class="btn btn-outline f-15" onclick="location.href='ophi.html'">
 			PREV
 		</button>
 		<button class="btn btn-outline f-15" onclick="location.href='likestore-console.html'">
