--- a/work/projects/funoo-identify.html
+++ b/work/projects/funoo-identify.html
@@ -85,7 +85,7 @@
 		<button class="btn btn-outline f-15" onclick="location.href='funoo-console.html'">
 			PREV
 		</button>
-		<button class="btn btn-outline f-15" onclick="location.href='likestore-web.html'">
+		<button class="btn btn-outline f-15" onclick="location.href='ophi.html'">
 			NEXT
 		</button>
 	</div>
