Add go to top button

--- a/work/projects/funoo-console.html
+++ b/work/projects/funoo-console.html
@@ -99,6 +99,7 @@
 			NEXT
 		</button>
 	</div>
+	<div class="gototop"></div>
     <section class="footer"></section>
 
 <script src="/js/jquery.min.js"></script>
