--- a/work/books/book-quote.html
+++ b/work/books/book-quote.html
@@ -71,6 +71,7 @@
 			NEXT
 		</button>
 	</div>
+	<div class="gototop"></div>
     <section class="footer"></section>
 
 <script src="/js/jquery.min.js"></script>
