--- a/work/books/book-taitung.html
+++ b/work/books/book-taitung.html
@@ -75,6 +75,7 @@
 			NEXT
 		</button>
 	</div>
+	<div class="gototop"></div>
     <section class="footer"></section>
 
 <script src="/js/jquery.min.js"></script>
