--- a/work/projects/likestore-web.html
+++ b/work/projects/likestore-web.html
@@ -112,6 +112,7 @@
 			NEXT
 		</button>
 	</div>
+	<div class="gototop"></div>
     <section class="footer"></section>
 
 <script src="/js/jquery.min.js"></script>
