Add purchase flow to ophi page

--- a/work/projects/ophi.html
+++ b/work/projects/ophi.html
@@ -57,6 +57,13 @@
 			<section class="section-desc flow-demo pt-2">
 				<figure class="animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
 					<picture>
+						<source media="(max-width: 600px)" srcset="/images/ophi/ophi024.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/ophi/ophi024.jpg" alt="">
+						<img src="/images/ophi/ophi024.jpg" alt="">
+					</picture>
+				</figure>
+				<figure class="animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
+					<picture>
 						<source media="(max-width: 600px)" srcset="/images/ophi/ophi004-small.jpg" alt="">
 						<source media="(min-width: 601px)" srcset="/images/ophi/ophi004.jpg" alt="">
 						<img src="/images/ophi/ophi004.jpg" alt="">
