Add design process to ophi page

--- a/work/projects/ophi-pain.html
+++ b/work/projects/ophi-pain.html
@@ -31,6 +31,9 @@
 				<figure class="animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
 					<img src="/images/ophi-pain/frame-11.jpg" alt="">
 				</figure>
+				<figure class="animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
+					<img src="/images/ophi-pain/frame-12.jpg" alt="">
+				</figure>
 			</section>
 		</div>
 	</div>
