--- a/work/projects/ophi.html
+++ b/work/projects/ophi.html
@@ -53,7 +53,18 @@
 					</picture>
 				</figure>
 			</section>
-			<h3 class="f-30 txt-center pt-2 animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">Purchase Flow</h3>
+			<h3 class="f-30 txt-center pt-2 animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">Design Process</h3>
+			<section class="section-desc flow-demo mb-0">
+				<figure class="animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
+					<img src="/images/ophi/ophi025.jpg" alt="">
+				</figure>
+			</section>
+			<div class="txt-center" style="margin-bottom:5.5rem;">
+				<button class="btn btn-outline f-15" onclick="location.href='ophi-pain.html'">
+					TAKE A LOOK
+				</button>
+			</div>
+			<h3 class="f-30 txt-center pt-2 animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s" style="border-top: thin solid rgba(0,0,0, 0.12);">Purchase Flow</h3>
 			<section class="section-desc flow-demo pt-2">
 				<figure class="animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
 					<picture>
