--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						<span class="f-32">吳姿嬋</span>
 					</h2>
 					<p class="info f-18">
-						Hi, I'm a designer from Taiwan. I've been working in the design field for 9 years. My degrees are in Graphic Design. I have a hardwired desire to extended skills. I'm a self taught Web Designer.
+						Hi, I'm a designer from Taiwan. I've been working in the design field for 12 years. My degrees are in Graphic Design. I have a hardwired desire to extended skills. I'm a self taught Web Designer.
 					</p>
 					<p class="quote f-32">
 						Put yourself in others' shoes for a different viewpoint.
@@ -57,134 +57,7 @@
 				</figcaption>
 			</figure>
 			<div class="modal no-action" id="modalProfile">
-				<div class="modal-content">
-					<div class="modal-header">
-						<h3 class="f-15 modal-title">PROFILE</h3>
-						<span class="close">
-							<img src="/images/icons/close.svg">
-						</span>
-					</div>
-					<div class="modal-body">
-						<p class="f-15 label">Skills</p>
-						<div class="list f-16">
-							<ul>
-								<li>Figma</li>
-								<li>Sketch</li>
-								<li>Zeplin</li>
-								<li>Photoshop</li>
-								<li>Illustrator</li>
-								<li>Indesign</li>
-								<li>HTML, RWD</li>
-								<li>CSS, Sass</li>
-								<li>Bootstarp</li>
-								<li>Vuetify</li>
-								<li>Git (version control)</li>
-							</ul>
-						</div>
-						<p class="f-15 label">Work Experiences</p>
-						<div class="career">
-							<div class="period">
-								<div>
-									<p class="f-20 company">Ignatius</p>
-									<p class="f-14">Nov 2020 - Jul 2021</p>
-								</div>
-								<p class="location">Taipei City</p>
-							</div>
-							<div class="description">
-								<p class="f-16 jobTitle"><b>UI / UX Designer</b></p>
-								<p class="f-15">
-									OPHI is an ERP system for dental clinic. <br>I am in charge of UI UX design, focus on enhance user experence from user flow and maintain responsive design. 
-								</p>
-							</div>
-						</div>
-						<div class="career">
-							<div class="period">
-								<div>
-									<p class="f-20 company">Oriente</p>
-									<p class="f-14">Nov 2017 - Apr 2020</p>
-								</div>
-								<p class="location">Taipei City</p>
-							</div>
-							<div class="description">
-								<p class="f-16 jobTitle"><b>UI / UX Designer</b></p>
-								<p class="f-15">
-									As a designer at Oriente, I work on projects like CRM, likestore and eStore. Using frameworks and technologies such as Bootstrap, Vuetify, Sass and Git. 
-								</p>
-							</div>
-						</div>
-						<div class="career">
-							<div class="period">
-								<div>
-									<p class="f-20 company">FunCity</p>
-									<p class="f-14">Mar 2017 - Jan 2018</p>
-								</div>
-								<p class="location">Taipei City</p>
-							</div>
-							<div class="description">
-								<p class="f-16 jobTitle"><b>Web Designer</b></p>
-								<p class="f-15">
-									I work on project FunOO (eCommerce Platform), redesign console and improve the user experience.
-								</p>
-							</div>
-						</div>
-						<div class="career">
-							<div class="period">
-								<div>
-									<p class="f-20 company">Fujidinos</p>
-									<p class="f-14">Dec 2015 - Jun 2016</p>
-								</div>
-								<p class="location">Taipei City</p>
-							</div>
-							<div class="description">
-								<p class="f-16 jobTitle"><b>Web Visual Designer</b></p>
-								<p class="f-15">
-									Fujidinos is a online shop. I am in charge of eDM (HTML & CSS) and banner visual design.
-								</p>
-							</div>
-						</div>
-						<div class="career">
-							<div class="period">
-								<div>
-									<p class="f-20 company">La Vie</p>
-									<p class="f-14">Jun 2013 - Apr 2015</p>
-								</div>
-								<p class="location">Taipei City</p>
-							</div>
-							<div class="description">
-								<p class="f-16 jobTitle"><b>Art Editor</b></p>
-								<p class="f-15">
-									La Vie is a lifestyle media. I am in charge of book design and marketing visual design.
-								</p>
-							</div>
-						</div>
-						<p class="f-15 label">Educations</p>
-						<div class="career school">
-							<div class="period">
-								<div>
-									<p class="f-17 company">Jinwen University of Science and Technology</p>
-									<p class="f-14">Jul 2006 - Jun 2010</p>
-								</div>
-								<p class="location">New Taipei City</p>
-							</div>
-							<div class="description">
-								<p class="f-16 jobTitle"><b>Visual Communication Design</b></p>
-							</div>
-						</div>
-						<div class="career school">
-							<div class="period">
-								<div>
-									<p class="f-17 company">Shilin High School of Commerce</p>
-									<p class="f-14">Jul 2003 - Jun 2006</p>
-								</div>
-								<p class="location">Taipei City</p>
-							</div>
-							<div class="description">
-								<p class="f-16 jobTitle"><b>Advertising Design</b></p>
-							</div>
-						</div>
-					</div>
-					<div class="modal-footer"></div>
-				</div>
+				<div class="profile-modal"></div>
 			</div>
 		</section>
 		<section class="projects section bg-gray sectionBorder" id="projects">
