Modify layout style

--- a/work/projects/likestore-identify.html
+++ b/work/projects/likestore-identify.html
@@ -55,7 +55,7 @@
 						<img src="/images/likestore/likestore036.jpg" alt="">
 					</picture>
 					<figcaption>
-						<a class="f-13" href="https://www.avenuespace.com/portfolio-item/likestore-%E9%9B%BB%E5%95%86%E5%B9%B3%E5%8F%B0%E4%B8%8A%E7%B7%9A%E8%A8%98%E8%80%85%E6%9C%83/" target="_blank">photo by GO92</a>
+						<a class="f-13" href="https://avenuespace.com/%E9%9B%BB%E5%95%86%E5%B9%B3%E5%8F%B0%E4%B8%8A%E7%B7%9A%E8%A8%98%E8%80%85%E6%9C%83/" target="_blank">photo by GO92</a>
 					</figcaption>
 				</figure>
 				<figure class="animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".4s">
