--- a/index.html
+++ b/index.html
@@ -65,6 +65,31 @@
 			<div class="ophi">
 				<div class="info animated wow fadeInDown" data-wow-duration="1.0s" data-wow-delay=".4s">
 					<h3 class="f-25">
+						LOC Studio／
+						<span class="f-16">UI, UX, Front-end code</span>
+					</h3>
+				</div>
+				<div class="imgGroup">
+					<div class="imgBox animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".6s" id="btnLikeweb">
+						<picture>
+							<source media="(max-width: 600px)" srcset="/images/ophi-small.jpg">
+							<source media="(min-width: 601px)" srcset="/images/loc.jpg">
+							<img src="images/loc.jpg">
+						</picture>
+						<a href="/work/projects/loc.html">
+							<div class="imgMask">
+								<div class="txtBox">
+									<p class="f-25 title">Logic Operating Centre</p>
+									<p class="f-16">UI / UX / Front-end code</p>
+								</div>
+							</div>
+						</a>
+					</div>
+				</div>	
+			</div>
+			<div class="ophi pt-3">
+				<div class="info animated wow fadeInDown" data-wow-duration="1.0s" data-wow-delay=".4s">
+					<h3 class="f-25">
 						OPHI／
 						<span class="f-16">UI, UX, Front-end code, RWD</span>
 					</h3>
