--- a/work/projects/loc.html
+++ b/work/projects/loc.html
@@ -14,70 +14,51 @@
 	<div class="workWrap">	
 		<section class="section-info">
 			<figure>
-				<img class="animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s" src="/images/ophi/ophi001.jpg" alt="">
+				<img class="animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s" src="/images/loc/loc001.jpg" alt="">
 				<figcaption class="title animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".4s">
 					<h1 class="f-40">
-						OPHI ERP
+						LOC Studio
 					</h1>
 					<div class="info">
 						<h3 class="f-25">
-							<span class="f-16">UI, UX, Front-end code, RWD</span>
+							<span class="f-16">UI, UX, Front-end code</span>
 						</h3>
 					</div>
 					<p class="f-18">
-						OPHI is an enterprise resource planning (ERP) system for dental clinic. 
-						Provides an accurate view, electronic record-keeping to make sure the organization's growth and needs.
+						LOC is a data transformation system for enterprise. Stitching all of your systems, services and applications together to build end-to-end pipelines in a governable and collaborative way.
 					</p>
 					<div class="f-15 dev-team">
-						<p>Web Design - Jessica Wu</p>
-						<p>Website Dev - Evan Tsai, Austin Chung </p>
+						<p>Web APP Design - Jessica Wu</p>
+						<p>Engineer - Atkins Chang, RenHao Xiao, Ken Lee</p>
 					</div>
 				</figcaption>
 			</figure>
 		</section>
 		<div class="contentWrap">
 			<section class="navigation"></section>
-			<section class="section-desc">
-				<figure class="title animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s">
-					<picture>
-						<source media="(max-width: 600px)" srcset="/images/ophi/ophi002-small.jpg">
-						<source media="(min-width: 601px)" srcset="/images/ophi/ophi002.jpg">
-						<img src="/images/ophi/ophi002.jpg" alt="">
-					</picture>
-				</figure>
-				<figure class="animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".4s">
-					<picture>
-						<source media="(max-width: 600px)" srcset="/images/ophi/ophi003-small.jpg">
-						<source media="(min-width: 601px)" srcset="/images/ophi/ophi003.jpg">
-						<img src="/images/ophi/ophi003.jpg" alt="">
-					</picture>
-				</figure>
+			<h3 class="f-30 txt-center pt-2 animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">How it works</h3>
+			<section class="mb-0">
+				<picture class="animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
+					<!-- <source media="(max-width: 600px)" srcset="/images/ophi/ophi002-small.jpg"> -->
+					<source media="(min-width: 601px)" srcset="/images/loc/loc002.jpg">
+					<img src="/images/loc/loc002.jpg" alt="">
+				</picture>
 			</section>
-			<h3 class="f-30 txt-center pt-2 animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">Design Process</h3>
-			<section class="section-desc flow-demo mb-0">
-				<figure class="animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
-					<img src="/images/ophi/ophi025.jpg" alt="">
-				</figure>
-			</section>
-			<div class="txt-center" style="margin-bottom:5.5rem;">
-				<button class="btn btn-outline f-15" onclick="location.href='ophi-pain.html'">
-					TAKE A LOOK
-				</button>
-			</div>
-			<h3 class="f-30 txt-center pt-2 animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s" style="border-top: thin solid rgba(0,0,0, 0.12);">Purchase Flow</h3>
+			<p class="f-20 txt-center pt-3 animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s" style="color:gray">
+				Establishing API Mart via LOC as the ultimate rule engine</p>
 			<section class="section-desc flow-demo pt-2">
 				<figure class="animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
 					<picture>
 						<source media="(max-width: 600px)" srcset="/images/ophi/ophi024.jpg" alt="">
-						<source media="(min-width: 601px)" srcset="/images/ophi/ophi024.jpg" alt="">
-						<img src="/images/ophi/ophi024.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/loc/loc003.jpg" alt="" style="border-radius: 16px;">
+						<img src="/images/loc/loc003.jpg" alt="" style="border-radius: 16px;">
 					</picture>
 				</figure>
-				<figure class="animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
+				<figure class="animated wow fadeIn pt-2" data-wow-duration="1.0s" data-wow-delay=".2s">
 					<picture>
-						<source media="(max-width: 600px)" srcset="/images/ophi/ophi004-small.jpg" alt="">
-						<source media="(min-width: 601px)" srcset="/images/ophi/ophi004.jpg" alt="">
-						<img src="/images/ophi/ophi004.jpg" alt="">
+						<source media="(max-width: 600px)" srcset="/images/ophi/ophi024.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/loc/loc004.jpg" alt="">
+						<img src="/images/loc/loc004.jpg" alt="">
 					</picture>
 				</figure>
 			</section>
@@ -164,10 +145,10 @@
 		</section>
 	</div>
 	<div class="buttons">
-		<button class="btn btn-outline f-15" onclick="location.href='loc.html'">
+		<button class="btn btn-outline f-15" onclick="location.href='funoo-identify.html'">
 			PREV
 		</button>
-		<button class="btn btn-outline f-15" onclick="location.href='likestore-web.html'">
+		<button class="btn btn-outline f-15" onclick="location.href='ophi.html'">
 			NEXT
 		</button>
 	</div>
