Add small size image to loc page

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 				<div class="imgGroup">
 					<div class="imgBox animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".6s" id="btnLikeweb">
 						<picture>
-							<source media="(max-width: 600px)" srcset="/images/ophi-small.jpg">
+							<source media="(max-width: 600px)" srcset="/images/loc-small.jpg">
 							<source media="(min-width: 601px)" srcset="/images/loc.jpg">
 							<img src="images/loc.jpg">
 						</picture>
