--- a/work/projects/loc.html
+++ b/work/projects/loc.html
@@ -39,7 +39,7 @@
 			<h3 class="f-30 txt-center pt-2 animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">How it works</h3>
 			<section class="mb-0">
 				<picture class="animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
-					<!-- <source media="(max-width: 600px)" srcset="/images/ophi/ophi002-small.jpg"> -->
+					<source media="(max-width: 600px)" srcset="/images/loc/loc002-small.jpg">
 					<source media="(min-width: 601px)" srcset="/images/loc/loc002.jpg">
 					<img src="/images/loc/loc002.jpg" alt="">
 				</picture>
@@ -49,14 +49,14 @@
 			<section class="section-desc flow-demo pt-2">
 				<figure class="animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
 					<picture>
-						<source media="(max-width: 600px)" srcset="/images/ophi/ophi024.jpg" alt="">
+						<source media="(max-width: 600px)" srcset="/images/loc/loc003-small.jpg" alt="">
 						<source media="(min-width: 601px)" srcset="/images/loc/loc003.jpg" alt="" style="border-radius: 16px;">
 						<img src="/images/loc/loc003.jpg" alt="" style="border-radius: 16px;">
 					</picture>
 				</figure>
 				<figure class="animated wow fadeIn pt-2" data-wow-duration="1.0s" data-wow-delay=".2s">
 					<picture>
-						<source media="(max-width: 600px)" srcset="/images/ophi/ophi024.jpg" alt="">
+						<source media="(max-width: 600px)" srcset="/images/loc/loc004-small.jpg" alt="">
 						<source media="(min-width: 601px)" srcset="/images/loc/loc004.jpg" alt="">
 						<img src="/images/loc/loc004.jpg" alt="">
 					</picture>
@@ -64,82 +64,53 @@
 			</section>
 		</div>
 		<section class="section-demo pt-3">
-			<figure class="border-radius animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
+			<figure class="animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
 				<picture>
-					<source media="(max-width: 600px)" srcset="/images/ophi/ophi012-small.jpg">
-					<source media="(min-width: 601px)" srcset="/images/ophi/ophi012.jpg">
-					<img src="/images/ophi/ophi012.jpg" alt="">
+					<source media="(max-width: 600px)" srcset="/images/loc/loc005-small.jpg">
+					<source media="(min-width: 601px)" srcset="/images/loc/loc005.jpg">
+					<img src="/images/loc/loc005.jpg" alt="">
 				</picture>
 			</figure>
 			<figure class="animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
 				<picture>
-					<source media="(max-width: 600px)" srcset="/images/ophi/ophi013-small.jpg">
-					<source media="(min-width: 601px)" srcset="/images/ophi/ophi013.jpg">
-					<img src="/images/ophi/ophi013.jpg" alt="">
-				</picture>
-			</figure>
-			<figure class="border-radius animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
-				<picture>
-					<source media="(max-width: 600px)" srcset="/images/ophi/ophi014-small.jpg">
-					<source media="(min-width: 601px)" srcset="/images/ophi/ophi014.jpg">
-					<img src="/images/ophi/ophi014.jpg" alt="">
+					<source media="(max-width: 600px)" srcset="/images/loc/loc006-small.jpg">
+					<source media="(min-width: 601px)" srcset="/images/loc/loc006.jpg">
+					<img src="/images/loc/loc006.jpg" alt="">
 				</picture>
 			</figure>
 			<figure class="animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
 				<picture>
-					<source media="(max-width: 600px)" srcset="/images/ophi/ophi015-small.jpg">
-					<source media="(min-width: 601px)" srcset="/images/ophi/ophi015.jpg">
-					<img src="/images/ophi/ophi015.jpg" alt="">
-				</picture>
-			</figure>
-			<figure class="border-radius animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
-				<picture>
-					<source media="(max-width: 600px)" srcset="/images/ophi/ophi016-small.jpg">
-					<source media="(min-width: 601px)" srcset="/images/ophi/ophi016.jpg">
-					<img src="/images/ophi/ophi016.jpg" alt="">
+					<source media="(max-width: 600px)" srcset="/images/loc/loc007-small.jpg">
+					<source media="(min-width: 601px)" srcset="/images/loc/loc007.jpg">
+					<img src="/images/loc/loc007.jpg" alt="">
 				</picture>
 			</figure>
 			<figure class="animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
 				<picture>
-					<source media="(max-width: 600px)" srcset="/images/ophi/ophi017-small.jpg">
-					<source media="(min-width: 601px)" srcset="/images/ophi/ophi017.jpg">
-					<img src="/images/ophi/ophi017.jpg" alt="">
-				</picture>
-			</figure>
-			<figure class="border-radius animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
-				<picture>
-					<source media="(max-width: 600px)" srcset="/images/ophi/ophi019-small.jpg">
-					<source media="(min-width: 601px)" srcset="/images/ophi/ophi019.jpg">
-					<img src="/images/ophi/ophi019.jpg" alt="">
+					<source media="(max-width: 600px)" srcset="/images/loc/loc008-small.jpg">
+					<source media="(min-width: 601px)" srcset="/images/loc/loc008.jpg">
+					<img src="/images/loc/loc008.jpg" alt="">
 				</picture>
 			</figure>
 			<figure class="animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
 				<picture>
-					<source media="(max-width: 600px)" srcset="/images/ophi/ophi018-small.jpg">
-					<source media="(min-width: 601px)" srcset="/images/ophi/ophi018.jpg">
-					<img src="/images/ophi/ophi018.jpg" alt="">
-				</picture>
-			</figure>
-			<h3 class="f-25 animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">DESIGN GUIDELINE</h3>	
-			<figure class="animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
-				<picture>
-					<source media="(max-width: 600px)" srcset="/images/ophi/ophi021-small.jpg" alt="">
-					<source media="(min-width: 601px)" srcset="/images/ophi/ophi021.jpg" alt="">
-					<img src="/images/ophi/ophi021.jpg" alt="">
-				</picture>
-			</figure>	
-			<figure class="animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
-				<picture>
-					<source media="(max-width: 600px)" srcset="/images/ophi/ophi022-small.jpg" alt="">
-					<source media="(min-width: 601px)" srcset="/images/ophi/ophi022.jpg" alt="">
-					<img src="/images/ophi/ophi022.jpg" alt="">
+					<source media="(max-width: 600px)" srcset="/images/loc/loc009-small.jpg">
+					<source media="(min-width: 601px)" srcset="/images/loc/loc009.jpg">
+					<img src="/images/loc/loc009.jpg" alt="">
 				</picture>
 			</figure>
 			<figure class="animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
 				<picture>
-					<source media="(max-width: 600px)" srcset="/images/ophi/ophi023-small.jpg" alt="">
-					<source media="(min-width: 601px)" srcset="/images/ophi/ophi023.jpg" alt="">
-					<img src="/images/ophi/ophi023.jpg" alt="">
+					<source media="(max-width: 600px)" srcset="/images/loc/loc010-small.jpg">
+					<source media="(min-width: 601px)" srcset="/images/loc/loc010.jpg">
+					<img src="/images/loc/loc010.jpg" alt="">
+				</picture>
+			</figure>
+			<figure class="animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
+				<picture>
+					<source media="(max-width: 600px)" srcset="/images/loc/loc011-small.jpg">
+					<source media="(min-width: 601px)" srcset="/images/loc/loc011.jpg">
+					<img src="/images/loc/loc011.jpg" alt="">
 				</picture>
 			</figure>
 		</section>
