--- a/work/projects/loc.html
+++ b/work/projects/loc.html
@@ -36,7 +36,7 @@
 		</section>
 		<div class="contentWrap">
 			<section class="navigation"></section>
-			<h3 class="f-30 txt-center pt-2 animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">How it works</h3>
+			<h3 class="f-30 txt-center pt-2 animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">Data Transformation</h3>
 			<section class="mb-0">
 				<picture class="animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
 					<source media="(max-width: 600px)" srcset="/images/loc/loc002-small.jpg">
@@ -50,20 +50,50 @@
 				<figure class="animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
 					<picture>
 						<source media="(max-width: 600px)" srcset="/images/loc/loc003-small.jpg" alt="">
-						<source media="(min-width: 601px)" srcset="/images/loc/loc003.jpg" alt="" style="border-radius: 16px;">
-						<img src="/images/loc/loc003.jpg" alt="" style="border-radius: 16px;">
+						<source media="(min-width: 601px)" srcset="/images/loc/loc003.jpg" alt="">
+						<img src="/images/loc/loc003.jpg" alt="">
 					</picture>
 				</figure>
-				<figure class="animated wow fadeIn pt-2" data-wow-duration="1.0s" data-wow-delay=".2s">
+			</section>
+			<h3 class="f-30 txt-center pt-3 animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">How to Visualize Data?</h3>
+			<section class="section-desc flow-demo">
+				<figure class="animated wow fadeIn pt-1 txt-left" data-wow-duration="1.0s" data-wow-delay=".2s">
+					<figcaption style="margin: 0.5rem 0.5rem 4rem">
+						<p class="f-20 mb-1">Target Audience: <span style="color: gray">To businesses, like financial and insurance companies</span></p>
+						<p class="f-20 mb-1">Commercial Goal: <span style="color:gray">Increase user trust</span></p>
+						<p class="f-20 mb-1">Usability Goal: <span style="color:gray">Help user quickly understand the core function</span></p>
+						<p class="f-20">Challenge: <span style="color: gray">Provide a graphical user interface and hide blockchain information that clients do not trust</span></p>
+					</figcaption>
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/loc/loc013-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/loc/loc013.jpg" alt="">
+						<img src="/images/loc/loc013.jpg" alt="">
+					</picture>
+				</figure>
+				<figure class="animated wow fadeIn pt-4" data-wow-duration="1.0s" data-wow-delay=".2s">
 					<picture>
 						<source media="(max-width: 600px)" srcset="/images/loc/loc004-small.jpg" alt="">
 						<source media="(min-width: 601px)" srcset="/images/loc/loc004.jpg" alt="">
 						<img src="/images/loc/loc004.jpg" alt="">
 					</picture>
 				</figure>
-			</section>
+				<figure class="animated wow fadeIn pt-4 mb-1" data-wow-duration="1.0s" data-wow-delay=".2s">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/loc/loc012-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/loc/loc012.jpg" alt="">
+						<img src="/images/loc/loc012.jpg" alt="">
+					</picture>
+				</figure>
+			</section>	
 		</div>
 		<section class="section-demo pt-3">
+			<figure class="animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
+				<picture>
+					<source media="(max-width: 600px)" srcset="/images/loc/loc014-small.jpg">
+					<source media="(min-width: 601px)" srcset="/images/loc/loc014.jpg">
+					<img src="/images/loc/loc014.jpg" alt="">
+				</picture>
+			</figure>
 			<figure class="animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
 				<picture>
 					<source media="(max-width: 600px)" srcset="/images/loc/loc005-small.jpg">
@@ -76,13 +106,6 @@
 					<source media="(max-width: 600px)" srcset="/images/loc/loc006-small.jpg">
 					<source media="(min-width: 601px)" srcset="/images/loc/loc006.jpg">
 					<img src="/images/loc/loc006.jpg" alt="">
-				</picture>
-			</figure>
-			<figure class="animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
-				<picture>
-					<source media="(max-width: 600px)" srcset="/images/loc/loc007-small.jpg">
-					<source media="(min-width: 601px)" srcset="/images/loc/loc007.jpg">
-					<img src="/images/loc/loc007.jpg" alt="">
 				</picture>
 			</figure>
 			<figure class="animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
@@ -113,6 +136,7 @@
 					<img src="/images/loc/loc011.jpg" alt="">
 				</picture>
 			</figure>
+			<p class="f-14 pt-2 txt-center"><img src="/images/icons/star.svg" style="width: 19px; position: relative; top: -2px; opacity: 0.7;" /> FST Network was selected one of 35 startup for <a href="https://meet.bnext.com.tw/articles/view/49618" target="_blank" style="color: rgb(90, 90, 90)">2022 Neo Star</a></p>
 		</section>
 	</div>
 	<div class="buttons">
