Add skill icons

--- a/profile-modal.html
+++ b/profile-modal.html
@@ -13,7 +13,7 @@
         <li>HTML, RWD</li>
         <li>CSS, Sass</li>
         <li>Git (version control)</li>
-        <li>Bootstarp</li>
+        <li>Bootstrap</li>
         <li>Vuetify</li>
         <li>Photoshop</li>
         <li>Illustrator</li>
