--- a/work/projects/crm.html
+++ b/work/projects/crm.html
@@ -21,6 +21,20 @@
 						<h3 class="f-25">
 							<span class="f-16">UI, UX, Front-end code</span>
 						</h3>
+						<span class="skill">
+							<i class="tooltip">
+								<img src="/images/icons/vue.svg" />
+								<span class="tooltip-text">Vue</span>
+							</i>
+							<i class="tooltip">
+								<img src="/images/icons/sass.svg" />
+								<span class="tooltip-text">Sass</span>
+							</i>
+							<i class="tooltip">
+								<img src="/images/icons/git.svg" />
+								<span class="tooltip-text">Git</span>
+							</i>
+						</span>
 					</div>
 					<p class="f-18">
 						Customer Relationship Management (CRM) is a B2C marketing tool, the CRM template is flexible, includes eDM, SMS, App push.
