--- a/work/projects/likestore-web.html
+++ b/work/projects/likestore-web.html
@@ -22,6 +22,20 @@
 						<h3 class="f-25">
 							<span class="f-16">UI, UX, Front-end code, RWD</span>
 						</h3>
+						<span class="skill">
+							<i class="tooltip">
+								<img src="/images/icons/bootstrap.svg" />
+								<span class="tooltip-text">Bootstrap</span>
+							</i>
+							<i class="tooltip">
+								<img src="/images/icons/css.svg" />
+								<span class="tooltip-text">CSS</span>
+							</i>
+							<i class="tooltip">
+								<img src="/images/icons/git.svg" />
+								<span class="tooltip-text">Git</span>
+							</i>
+						</span>
 					</div>
 					<p class="f-18">
 						Likestore is a e-commerce platform, that empowered anyone to create their own online store with no coding skills needed.
