--- a/work/projects/loc.html
+++ b/work/projects/loc.html
@@ -23,6 +23,24 @@
 						<h3 class="f-25">
 							<span class="f-16">UI, UX, Front-end code</span>
 						</h3>
+						<span class="skill">
+							<i class="tooltip">
+								<img src="/images/icons/react.svg" />
+								<span class="tooltip-text">React</span>
+							</i>
+							<i class="tooltip">
+								<img src="/images/icons/antdesign.svg" />
+								<span class="tooltip-text">Ant Design</span>
+							</i>
+							<i class="tooltip">
+								<img src="/images/icons/less.svg" />
+								<span class="tooltip-text">Less</span>
+							</i>
+							<i class="tooltip">
+								<img src="/images/icons/git.svg" />
+								<span class="tooltip-text">Git</span>
+							</i>
+						</span>
 					</div>
 					<p class="f-18">
 						LOC is a data transformation system for enterprise. Stitching all of your systems, services and applications together to build end-to-end pipelines in a governable and collaborative way.
