Modify wording and images of loc page

--- a/work/projects/loc.html
+++ b/work/projects/loc.html
@@ -80,7 +80,7 @@
 						<p class="f-20 mb-1">Target Audience: <span style="color: gray">To businesses, like financial and insurance companies</span></p>
 						<p class="f-20 mb-1">Commercial Goal: <span style="color:gray">Increase user trust</span></p>
 						<p class="f-20 mb-1">Usability Goal: <span style="color:gray">Help user quickly understand the core function</span></p>
-						<p class="f-20">Challenge: <span style="color: gray">Provide a graphical user interface and hide blockchain information that clients do not trust</span></p>
+						<p class="f-20">Challenge: <span style="color: gray">Provide a graphical user interface</span></p>
 					</figcaption>
 					<picture>
 						<source media="(max-width: 600px)" srcset="/images/loc/loc013-small.jpg" alt="">
@@ -114,16 +114,17 @@
 			</figure>
 			<figure class="animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
 				<picture>
-					<source media="(max-width: 600px)" srcset="/images/loc/loc005-small.jpg">
-					<source media="(min-width: 601px)" srcset="/images/loc/loc005.jpg">
-					<img src="/images/loc/loc005.jpg" alt="">
+					<source media="(max-width: 600px)" srcset="/images/loc/loc007-small.jpg">
+					<source media="(min-width: 601px)" srcset="/images/loc/loc007.jpg">
+					<img src="/images/loc/loc007.jpg" alt="v1.0 railway">
 				</picture>
+				<figcaption class="txt-center" style="color: rgba(0,0,0,0.6);">Change logic verification direction based on user feedback</figcaption>
 			</figure>
 			<figure class="animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
 				<picture>
-					<source media="(max-width: 600px)" srcset="/images/loc/loc006-small.jpg">
-					<source media="(min-width: 601px)" srcset="/images/loc/loc006.jpg">
-					<img src="/images/loc/loc006.jpg" alt="">
+					<source media="(max-width: 600px)" srcset="/images/loc/loc005-small.jpg">
+					<source media="(min-width: 601px)" srcset="/images/loc/loc005.jpg">
+					<img src="/images/loc/loc005.jpg" alt="v2.0 railway">
 				</picture>
 			</figure>
 			<figure class="animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
@@ -131,6 +132,13 @@
 					<source media="(max-width: 600px)" srcset="/images/loc/loc008-small.jpg">
 					<source media="(min-width: 601px)" srcset="/images/loc/loc008.jpg">
 					<img src="/images/loc/loc008.jpg" alt="">
+				</picture>
+			</figure>
+			<figure class="animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
+				<picture>
+					<source media="(max-width: 600px)" srcset="/images/loc/loc006-small.jpg">
+					<source media="(min-width: 601px)" srcset="/images/loc/loc006.jpg">
+					<img src="/images/loc/loc006.jpg" alt="">
 				</picture>
 			</figure>
 			<figure class="animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
