--- a/work/projects/loc.html
+++ b/work/projects/loc.html
@@ -8,6 +8,17 @@
 	
 <link rel="stylesheet" href="/css/work.css">
 <link rel="stylesheet" href="/css/animate.css">
+<!-- Hotjar Tracking Code for https://apf059.github.io/ -->
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:5310116,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
 </head>
 
 <body>	
