Add enhance image to loc

--- a/work/projects/loc.html
+++ b/work/projects/loc.html
@@ -60,6 +60,9 @@
 						<p>Web APP Design - Jessica Wu</p>
 						<p>Engineer - Atkins Chang, RenHao Xiao, Ken Lee</p>
 					</div>
+					<p class="f-14 pt-2">
+						<img src="/images/icons/star.svg" style="width: 19px; position: relative; top: -2px; opacity: 0.7;" /> FST Network was selected one of 35 startup for <a href="https://meet.bnext.com.tw/articles/view/49618" target="_blank" style="color: rgb(90, 90, 90)">2022 Neo Star</a>
+					</p>
 				</figcaption>
 			</figure>
 		</section>
@@ -173,7 +176,11 @@
 					<img src="/images/loc/loc011.jpg" alt="">
 				</picture>
 			</figure>
-			<p class="f-14 pt-2 txt-center"><img src="/images/icons/star.svg" style="width: 19px; position: relative; top: -2px; opacity: 0.7;" /> FST Network was selected one of 35 startup for <a href="https://meet.bnext.com.tw/articles/view/49618" target="_blank" style="color: rgb(90, 90, 90)">2022 Neo Star</a></p>
+			<div class="txt-center mb-2">
+				<button class="btn btn-outline f-15" onclick="location.href='/images/loc/loc_enhance.jpg'">
+					TAKE A LOOK
+				</button>
+			</div>
 		</section>
 	</div>
 	<div class="buttons">
